--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,7 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>yuicompressor-maven-plugin</artifactId>
+					<version>1.3.2</version>
                     <executions>
                         <execution>
                             <phase>process-resources</phase>
