ALF-44 Создание/редактирование сущностей (CRUD) - Сервис "Справочник организации" [+] Добавлено "удаление" для подразделений
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@236 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -7,4 +7,8 @@ control.table.column.primary.title=Is Primary
 control.table.column.actions.title=Actions
 control.table.column.role.title=Role
 message.new-element.success=New element added
-message.new-element.failure=New element added
+message.new-element.failure=New element added failure
+message.confirm.delete.title=Delete Item
+message.confirm.delete.description=Are you sure you want to delete this item?
+message.delete.success=Unit was deleted
+message.delete.failure=Could not delete unit
