--- a/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.tree.get.properties
+++ b/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.tree.get.properties
@@ -1,8 +1,4 @@
-orgstructure.title.create.person=Append Person
-orgstructure.title.edit.person=Edit Person
-orgstructure.title.create.strucuture=Add structure unit
-orgstructure.title.edit.strucuture=Edit structure unit
-
-orgstructure.append=Append
-orgstructure.append.employee=Employee
-orgstructure.append.division=Division
+message.delete.unit.success=Unit was successful deleted
+message.delete.unit.failure.has.children=Cannot delete unit. It has children units
+message.delete.unit.failure.has.composition=Cannot delete unit. It has employeeys in compositions
+message.delete.unit.error=Some error occured
