1) Добавлен иерархический справочник с адресом 2) Добавлен тестовый справочник со всеми видами контролов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@251 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <module>lecm-jasperreports-forms</module>
 	    <module>lecm-dictionary</module>
 	    <module>lecm-dictionary-regions</module>
+	    <module>lecm-dictionary-test</module>
 	    <module>lecm-contracts</module>
     </modules>
     <scm>
