--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -154,6 +154,13 @@
 			<scope>runtime</scope>
 			<type>amp</type>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.dictionary</groupId>
+            <artifactId>dictionary-test-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 		<dependency>
 			<groupId>ru.it.lecm.contracts</groupId>
 			<artifactId>contracts-repo</artifactId>
