--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -100,6 +100,13 @@
 			<type>amp</type>
 			<scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.dictionary</groupId>
+            <artifactId>dictionary-test-share</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 		<dependency>
 			<groupId>ru.it.lecm.contracts</groupId>
 			<artifactId>contracts-share</artifactId>
