ALF-43 Поиск и фильтры - Сервис "Справочник организации"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@266 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -12,3 +12,7 @@ message.confirm.delete.title=Delete Item
 message.confirm.delete.description=Are you sure you want to delete this item?
 message.delete.success=Unit was deleted
 message.delete.failure=Could not delete unit
+
+page.orgstructure=Orgstructure
+
+search-block=Search
