--- a/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.datagrid.get.properties
+++ b/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.datagrid.get.properties
@@ -32,3 +32,8 @@ actions.view=View
 actions.edit=Edit
 actions.duplicate-row=Duplicate
 actions.delete-row=Delete
+
+# Search
+button.search=Search
+button.clear=Clear
+label.keywords=Keywords
