ALF-75: Создание нового элемента справочника из формы документа (всплывающее окно)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@271 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/form/form.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/form/form.properties
@@ -1,2 +1,3 @@
 logicecm.base.selected-elements=Selected elements
 logicecm.base.select-tree-element=Please, select element from tree
+logicecm.base.create-new-button.label=+
