ALF-82: Групповые операции: групповые операции отображаеютсмя на панели (не в меню)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@281 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/java/ru/it/lecm/dictionary/form/form.properties
+++ b/lecm-dictionary/share/src/main/java/ru/it/lecm/dictionary/form/form.properties
@@ -1,2 +1,3 @@
 logicecm.orgstructure.employee.workplace=Workplace
 logicecm.orgstructure.employee.person=Account
+logicecm.dictionary.add-element=Add element
