--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
@@ -2,6 +2,7 @@ button.new-row=New Item
 button.print=Print
 button.rss-feed=RSS Feed
 button.export=Export
+button.import=Import
 
 label.new-row.title=Create New Item
 
