ALF-43 Поиск и фильтры [~]Доработан поиск по ключевым словам [~] Вынесен функционал Datagrid в модуль Base
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@284 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/components/datagrid/lecm.datagrid.get.properties
+++ b/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/components/datagrid/lecm.datagrid.get.properties
@@ -32,8 +32,11 @@ actions.view=View
 actions.edit=Edit
 actions.duplicate-row=Duplicate
 actions.delete-row=Delete
+actions.version=Preview Version
+actions.more=More
 
 # Search
 button.search=Search
 button.clear=Clear
+
 label.keywords=Keywords
