Экспорт. Добавлен экспорт в CSV по выделенным значениям.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@298 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/repo/pom.xml
+++ b/lecm-dictionary/repo/pom.xml
@@ -62,6 +62,10 @@
             <artifactId>alfresco-remote-api</artifactId>
             <version>4.0.e</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
