--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
                 <version>1.2.2</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>net.sourceforge.javacsv</groupId>
+                <artifactId>javacsv</artifactId>
+                <version>2.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
