ALF-76: Просмотр элемента справочника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@320 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
@@ -34,3 +34,11 @@ actions.duplicate-row=Duplicate
 actions.delete-row=Delete
 actions.version=Preview Version
 actions.more=More
+
+# Search
+button.search=Search
+button.clear=Clear
+
+label.keywords=Keywords
+
+logicecm.dictionary.view=View
