Тема включена в сборку платформы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@321 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
 	    <module>lecm-dictionary-regions</module>
 	    <module>lecm-dictionary-test</module>
 	    <module>lecm-contracts</module>
+	    <module>lecm-theme</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
