добавил модуль делегирования в сборку платформы добавил модуль делегирования в сборку сервера
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@336 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 	    <module>lecm-dictionary-test</module>
 	    <module>lecm-contracts</module>
 	    <module>lecm-theme</module>
+	    <module>lecm-delegation</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
