--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>ru.it.lecm</groupId>
-        <artifactId>server</artifactId>
-        <version>0.1.0</version>
-    </parent>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>ru.it.lecm</groupId>
+		<artifactId>server</artifactId>
+		<version>0.1.0</version>
+	</parent>
 
-    <groupId>ru.it.lecm.server</groupId>
+	<groupId>ru.it.lecm.server</groupId>
 	<artifactId>server-share</artifactId>
 	<name>Alfresco Share client</name>
 	<packaging>war</packaging>
@@ -19,31 +19,31 @@
 			<url>http://maven.alfresco.com/nexus/content/groups/public</url>
 		</repository>
 		<repository>
-            <id>alfresco-public-snapshots</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>alfresco-public</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>alfresco-public-snapshots</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
+			<id>alfresco-public-snapshots</id>
+			<url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>alfresco-public</id>
+			<url>http://maven.alfresco.com/nexus/content/groups/public</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>alfresco-public-snapshots</id>
+			<url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<properties>
 		<!--<env>local</env>-->
-        <!--<alfresco.edition>community</alfresco.edition>-->
-        <webapp.name>share</webapp.name>
+		<!--<alfresco.edition>community</alfresco.edition>-->
+		<webapp.name>share</webapp.name>
 		<share.log.level>info</share.log.level>
 		<share.servlet.port>8080</share.servlet.port>
-        <surf.wiring.mode>development</surf.wiring.mode><!-- "production" is the other allowed value -->
+		<surf.wiring.mode>development</surf.wiring.mode><!-- "production" is the other allowed value -->
 	</properties>
 
 	<!-- Alfresco dependencies -->
@@ -54,38 +54,38 @@
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>share</artifactId>
-            <version>${alfresco.version}</version>
-            <type>war</type>
+			<version>${alfresco.version}</version>
+			<type>war</type>
 		</dependency>
 
-        <dependency>
-            <groupId>ru.it.lecm.base</groupId>
-            <artifactId>base-share</artifactId>
-            <version>${platform.version}</version>
-            <type>amp</type>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>ru.it.lecm.orgstructure</groupId>
-            <artifactId>orgstructure-share</artifactId>
-            <version>${platform.version}</version>
-            <type>amp</type>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>ru.it.lecm.experts</groupId>
-            <artifactId>experts-share</artifactId>
-            <version>${platform.version}</version>
-            <type>amp</type>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>ru.it.lecm.forms.jasperforms</groupId>
-            <artifactId>jasperforms-share</artifactId>
-            <version>${platform.version}</version>
-            <type>amp</type>
-            <scope>runtime</scope>
-        </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.base</groupId>
+			<artifactId>base-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.orgstructure</groupId>
+			<artifactId>orgstructure-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.experts</groupId>
+			<artifactId>experts-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.forms.jasperforms</groupId>
+			<artifactId>jasperforms-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.dictionary</groupId>
 			<artifactId>dictionary-share</artifactId>
@@ -100,13 +100,13 @@
 			<type>amp</type>
 			<scope>runtime</scope>
 		</dependency>
-        <dependency>
-            <groupId>ru.it.lecm.dictionary</groupId>
-            <artifactId>dictionary-test-share</artifactId>
-            <version>${platform.version}</version>
-            <type>amp</type>
-            <scope>runtime</scope>
-        </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.dictionary</groupId>
+			<artifactId>dictionary-test-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.contracts</groupId>
 			<artifactId>contracts-share</artifactId>
@@ -121,11 +121,18 @@
 			<type>amp</type>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.delegation</groupId>
+			<artifactId>lecm-delegation-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
-        <finalName>${webapp.name}</finalName>
-    <!-- Runtime properties file which is used to configure your Share instance. It's multi-environment aware (-Denv=yourEnv) -->
+		<finalName>${webapp.name}</finalName>
+	<!-- Runtime properties file which is used to configure your Share instance. It's multi-environment aware (-Denv=yourEnv) -->
 		<!--<filters>-->
 			<!--<filter>${project.basedir}/src/main/properties/${env}/application.properties</filter>-->
 		<!--</filters>-->
@@ -158,41 +165,41 @@
 			<!--</resource>-->
 		</resources>
 		<plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.3</version>
-                <executions>
-                    <execution>
-                        <id>unpack-amps</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <includeTypes>amp</includeTypes>
-                            <outputDirectory>${project.build.directory}/${webapp.name}</outputDirectory>
-                            <excludes>META*</excludes>
-                        </configuration>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <!--
-                   This is required to be re-defined explicitly at plugin level as
-                   otherwise the 'amp' extension unArchiver won't be available to the
-                   maven-dependency-plugin
-               -->
-                    <dependency>
-                        <groupId>org.alfresco.maven.plugin</groupId>
-                        <artifactId>maven-amp-plugin</artifactId>
-                        <version>3.0.4</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<id>unpack-amps</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeTypes>amp</includeTypes>
+							<outputDirectory>${project.build.directory}/${webapp.name}</outputDirectory>
+							<excludes>META*</excludes>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<!--
+				   This is required to be re-defined explicitly at plugin level as
+				   otherwise the 'amp' extension unArchiver won't be available to the
+				   maven-dependency-plugin
+			   -->
+					<dependency>
+						<groupId>org.alfresco.maven.plugin</groupId>
+						<artifactId>maven-amp-plugin</artifactId>
+						<version>3.0.4</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-                <version>2.2</version>
+				<version>2.2</version>
 				<configuration>
 					<archiveClasses>false</archiveClasses>
 					<!--<filters>-->
@@ -201,25 +208,25 @@
 					<webResources></webResources>
 				</configuration>
 			</plugin>
-             <!-- Needed for cross OS compatibility in acp/zip encoding -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <!-- By default as per http://code.google.com/p/maven-alfresco-archetypes/issues/detail?id=7 FTL are not filtered to avoid corruption.
-                        | This behavior can be relaxed (in case filtering is needed in the FTLs) by selecting which files are filtered and which not as described 
-                        | here http://code.google.com/p/maven-alfresco-archetypes/issues/detail?id=7#c3
-                        -->
-                    <nonFilteredFileExtensions>
-                        <nonFilteredFileExtension>ftl</nonFilteredFileExtension>
-                    </nonFilteredFileExtensions>
-                </configuration>
-            </plugin>
+			 <!-- Needed for cross OS compatibility in acp/zip encoding -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<!-- By default as per http://code.google.com/p/maven-alfresco-archetypes/issues/detail?id=7 FTL are not filtered to avoid corruption.
+						| This behavior can be relaxed (in case filtering is needed in the FTLs) by selecting which files are filtered and which not as described
+						| here http://code.google.com/p/maven-alfresco-archetypes/issues/detail?id=7#c3
+						-->
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>ftl</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-	
+
 	<!-- Custom behaviors -->
 
 </project>
