Добавлен полнотекстовый поиск в toolbar справочника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@337 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
@@ -3,6 +3,7 @@ button.print=Print
 button.rss-feed=RSS Feed
 button.export=Export
 button.import=Import
+button.search=Search
 
 label.new-row.title=Create New Item
 
