Включение редактора машины состояний в сборку
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@348 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,8 @@
 	    <module>lecm-dictionary-regions</module>
 	    <module>lecm-dictionary-test</module>
 	    <module>lecm-contracts</module>
-	    <module>lecm-theme</module>
+		<module>lecm-statemachine-editor</module>
+		<module>lecm-theme</module>
 	    <module>lecm-delegation</module>
     </modules>
     <scm>
