--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -115,6 +115,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.statemachine.editor</groupId>
+			<artifactId>statemachine-editor-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.theme</groupId>
 			<artifactId>lecm-theme-share</artifactId>
 			<version>${platform.version}</version>
